# ckqetools

./: .gitignore  README.md  pyproject.toml
src/ckqetools/: __init__.py  high_symmetry_point.py  tool.py
src/ckqetools/phonon/: dispersion.py  dos.py  phonon.py
src/ckqetools/phonon/script/: ckqetools_phonon_dispersion.py  ckqetools_phonon_dos.py
src/ckqetools/pyrun_props/: add_argument.py
src/ckqetools/script/: ckqetools_phonon_dispersion.py  ckqetools_phonon_dos.py  ckqetools_phonon_dos_dispersion.py  ckqetools_phonon_json.py
tests/: GaN-dispersion-others.sh  GaN-dispersion.sh  GaN-dos-dispersion.sh  GaN-dos.sh  GaN-json.sh
tests/result/GaN/: dispersion__GaN_100.csv  dispersion__GaN_colorful.csv  dispersion__GaN_qpointsspecs.csv  dispersion__GaN_reorder.csv  dos__GaN.csv  dos_dispersion__GaN.csv
tests/sample/GaN/: GaN.fc  ph.in  ph.out  q2r.in  q2r.out  scf.in  scf.out
tests/sample/GaN/dos/: matdyn.dos  matdyn.dos.in
tests/sample/GaN/freq/: matdyn.freq.in  matdyn.modes
tests/sample/GaN/freq100/: matdyn.freq.in  matdyn.modes
tests/sample/GaN/freq_qpointsspecs/: matdyn.freq.in  matdyn.modes
