[project]
name = "ckqetools"
authors = [{name = "Masaya Chizaki"}]
description = "Library for Quantum ESPRESSO"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "tools-barebone"
]
dynamic = ["version"]

[project.scripts]
ckqetools-phonon-dos            = "ckqetools.script.ckqetools_phonon_dos:main"
ckqetools-phonon-dispersion     = "ckqetools.script.ckqetools_phonon_dispersion:main"
ckqetools-phonon-dos-dispersion = "ckqetools.script.ckqetools_phonon_dos_dispersion:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ckqetools.version"}

[tool.setuptools_scm]
write_to = "src/ckqetools/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools", "setuptools_scm"]

